static/main.tf

# Our default security group to access
# the instances over SSH and HTTP
resource "aws_security_group" "website-sg" {
  name        = "website sg"
  description = "80 and 22 inbound"

  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP access from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_elb" "web" {
  name = "webserver-elb"

  subnets         = ["${var.subnet_ids}"]
  security_groups = ["${aws_security_group.website-sg.id}"]

  listener {
    instance_port     = 80
    instance_protocol = "http"
    lb_port           = 80
    lb_protocol       = "http"
  }

  health_check {
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 3
    target              = "HTTP:80/"
    interval            = 30
  }
}


resource "aws_sns_topic" "dgsilcox_sns_topic" {
  name = "dgsilcox_sns_topic"
}
